[fix] Text overflow from title bar

--- a/stylesheet/heatmap.css
+++ b/stylesheet/heatmap.css
@@ -147,7 +147,7 @@ text.month,
   }
   .titles {
     padding-top: 1em;
-    height: 7em;
+    height: 10em;
   }
   .heatmap-heading {
     font-size: small;
